--- a/RedEdr/RedEdr.vcxproj
+++ b/RedEdr/RedEdr.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="cache.cpp" />
+    <ClCompile Include="config.cpp" />
     <ClCompile Include="etwreader.cpp" />
     <ClCompile Include="kernelcom.cpp" />
     <ClCompile Include="procinfo.cpp" />
