--- a/RedEdrTester/RedEdrTester.vcxproj.filters
+++ b/RedEdrTester/RedEdrTester.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="..\RedEdr\cache.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\RedEdr\logreader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
