--- a/RedEdr/RedEdr.vcxproj
+++ b/RedEdr/RedEdr.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="etwreader.cpp" />
     <ClCompile Include="kernelcom.cpp" />
     <ClCompile Include="logreader.cpp" />
+    <ClCompile Include="loguru.cpp" />
     <ClCompile Include="procinfo.cpp" />
     <ClCompile Include="RedEdr.cpp" />
   </ItemGroup>
@@ -143,6 +144,7 @@
     <ClInclude Include="etwreader.h" />
     <ClInclude Include="kernelcom.h" />
     <ClInclude Include="logreader.h" />
+    <ClInclude Include="loguru.hpp" />
     <ClInclude Include="procinfo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
