--- a/RedEdr/RedEdr.vcxproj.filters
+++ b/RedEdr/RedEdr.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="logreader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="loguru.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="etwreader.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="logreader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="loguru.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
