feature: improve userspace dll injector

--- a/MyDumbEDRDLL/MyDumbEDRDLL.vcxproj
+++ b/MyDumbEDRDLL/MyDumbEDRDLL.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="minhook\src\hde\table64.h" />
     <ClInclude Include="minhook\src\trampoline.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="rededrpipeclient.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
