--- a/RedEdr/RedEdr.vcxproj
+++ b/RedEdr/RedEdr.vcxproj
@@ -136,7 +136,7 @@
     <ClCompile Include="etwhandler.cpp" />
     <ClCompile Include="etwreader.cpp" />
     <ClCompile Include="injecteddllreader.cpp" />
-    <ClCompile Include="kernelcom.cpp" />
+    <ClCompile Include="kernelreader.cpp" />
     <ClCompile Include="logreader.cpp" />
     <ClCompile Include="loguru.cpp" />
     <ClCompile Include="procinfo.cpp" />
@@ -150,7 +150,7 @@
     <ClInclude Include="etwhandler.h" />
     <ClInclude Include="etwreader.h" />
     <ClInclude Include="injecteddllreader.h" />
-    <ClInclude Include="kernelcom.h" />
+    <ClInclude Include="kernelreader.h" />
     <ClInclude Include="logreader.h" />
     <ClInclude Include="loguru.hpp" />
     <ClInclude Include="procinfo.h" />
