--- a/RedEdrDll/RedEdrDll.vcxproj
+++ b/RedEdrDll/RedEdrDll.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{1ddd15aa-d837-4143-a272-0e08f9ed6c40}</ProjectGuid>
     <RootNamespace>CylantStrike</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>MyDumbEDRDLL</ProjectName>
+    <ProjectName>RedEdrDll</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -85,7 +85,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <TargetName>MyDumbEDRDLL</TargetName>
+    <TargetName>RedEdrDll</TargetName>
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
     <OutDir>C:\RedEdr</OutDir>
   </PropertyGroup>
