--- a/RedEdr/RedEdr.vcxproj.filters
+++ b/RedEdr/RedEdr.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="injecteddllreader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="driverinterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="etwreader.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="injecteddllreader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="driverinterface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
