feature: etw-ti ppl reader!

--- a/RedEdr/RedEdr.vcxproj.filters
+++ b/RedEdr/RedEdr.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="output.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pplreader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="etwreader.h">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="mypeb.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pplreader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
