--- a/RedEdrPplService/RedEdrPplService.vcxproj
+++ b/RedEdrPplService/RedEdrPplService.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>16.0</VCProjectVersion>
+    <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d4ab9b77-7a7b-45e8-8bdc-ac958edb1372}</ProjectGuid>
-    <RootNamespace>RedEdr</RootNamespace>
+    <ProjectGuid>{f9d83ee0-d3eb-4c01-8f3c-bb8167d3c752}</ProjectGuid>
+    <RootNamespace>RedEdrPplService</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -44,6 +44,7 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
+    <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -70,9 +71,6 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>C:\RedEdr</OutDir>
-  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -111,6 +109,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>Advapi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -130,38 +129,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="cache.cpp" />
-    <ClCompile Include="config.cpp" />
-    <ClCompile Include="dllinjector.cpp" />
-    <ClCompile Include="driverinterface.cpp" />
-    <ClCompile Include="etwhandler.cpp" />
-    <ClCompile Include="etwreader.cpp" />
-    <ClCompile Include="injecteddllreader.cpp" />
-    <ClCompile Include="kernelreader.cpp" />
-    <ClCompile Include="logreader.cpp" />
-    <ClCompile Include="loguru.cpp" />
-    <ClCompile Include="output.cpp" />
-    <ClCompile Include="pplreader.cpp" />
-    <ClCompile Include="procinfo.cpp" />
-    <ClCompile Include="RedEdr.cpp" />
+    <ClCompile Include="consumer.c" />
+    <ClCompile Include="control.c" />
+    <ClCompile Include="emitter.c" />
+    <ClCompile Include="RedEdrPplService.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cache.h" />
-    <ClInclude Include="config.h" />
-    <ClInclude Include="cxxops.hpp" />
-    <ClInclude Include="dllinjector.h" />
-    <ClInclude Include="driverinterface.h" />
-    <ClInclude Include="etwhandler.h" />
-    <ClInclude Include="etwreader.h" />
-    <ClInclude Include="httplib.h" />
-    <ClInclude Include="injecteddllreader.h" />
-    <ClInclude Include="kernelreader.h" />
-    <ClInclude Include="logreader.h" />
-    <ClInclude Include="loguru.hpp" />
-    <ClInclude Include="mypeb.h" />
-    <ClInclude Include="output.h" />
-    <ClInclude Include="pplreader.h" />
-    <ClInclude Include="procinfo.h" />
+    <ClInclude Include="consumer.h" />
+    <ClInclude Include="control.h" />
+    <ClInclude Include="emitter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
