--- a/RedEdrDriver/RedEdrDriver.vcxproj
+++ b/RedEdrDriver/RedEdrDriver.vcxproj
@@ -74,7 +74,7 @@
   <PropertyGroup />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
-    <OutDir>c:\RedEdr</OutDir>
+    <OutDir>c:\RedEdr\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
