--- a/RedEdrPplService/RedEdrPplService.vcxproj.filters
+++ b/RedEdrPplService/RedEdrPplService.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="utils.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="objcache.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="emitter.h">
@@ -42,6 +45,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="uthash.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="objcache.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
