--- a/RedEdrTester/RedEdrTester.vcxproj.filters
+++ b/RedEdrTester/RedEdrTester.vcxproj.filters
@@ -39,5 +39,13 @@
     <ClCompile Include="..\RedEdr\output.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\RedEdr\utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="uthash.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
