--- a/RedEdrPplService/RedEdrPplService.vcxproj
+++ b/RedEdrPplService/RedEdrPplService.vcxproj
@@ -135,7 +135,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="consumer.c" />
+    <ClCompile Include="etwtireader.c" />
     <ClCompile Include="control.c" />
     <ClCompile Include="emitter.c" />
     <ClCompile Include="objcache.c" />
@@ -143,7 +143,7 @@
     <ClCompile Include="utils.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="consumer.h" />
+    <ClInclude Include="etwtireader.h" />
     <ClInclude Include="control.h" />
     <ClInclude Include="emitter.h" />
     <ClInclude Include="objcache.h" />
