--- a/RedEdrDll/RedEdrDll.vcxproj
+++ b/RedEdrDll/RedEdrDll.vcxproj
@@ -162,6 +162,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="dllhelper.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="minhook\include\MinHook.h" />
     <ClInclude Include="minhook\src\buffer.h" />
@@ -175,6 +176,7 @@
     <ClInclude Include="rededrpipeclient.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="dllhelper.cpp" />
     <ClCompile Include="dllmain.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
